--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <li class="Nav"><a href="#Maincontent">Haarlem</a></li>
         <li class="Nav"><a href="#Secondarycontent">Schalkwoud Haarlem</a></li>
         <li class="Nav"><a href="#Sport">Sports</a></li>
-        <li class="Nav"><a href="#Referal"></a>HWA-RANG DRAGON</li>
-        <li class="Nav"><a href="#Contact"></a>Contact</li>
+        <li class="Nav"><a href="#Referal">HWA-RANG DRAGON</a></li>
+        <li class="Nav"><a href="#Contact">Contact</a></li>
       </ul>
     </nav>
     <main>
