--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <meta name="author" content="Govand Maeruf">
     <meta name="" content="">
     <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <title>Hapki-do</title>
   </head>
   <body>
-    <header class="Mainheader">
+    <header class="WebsiteHeader">
       <h1>Hapki-do</h1>
       <h2>A piece of Korea in our beautiful city of Haarlem</h2>
     </header>
@@ -25,6 +27,10 @@
       </ul>
     </nav>
     <main>
+      <h1 class="titleVideo">Welcome<</h1>
+      <video autoplay muted loop class="Video">
+        <source src="video/waterfall.mp4" type="video/mp4">
+      </video>
       <section id="Maincontent">
         <article class="Main">
           <header id="Main">
@@ -58,61 +64,61 @@
             <a href="#">
               <img src="" alt="">
             </a>
-            <p></p>
+            <p>1</p>
           </li>
-          <li>
+          <li data-id="2" data-title="">
             <a href="#">
               <img src="" alt="">
             </a>
-            <p></p>
+            <p>2</p>
           </li>
-          <li>
+          <li data-id="3" data-title="">
             <a href="#">
               <img src="" alt="">
             </a>
-            <p></p>
+            <p>3</p>
           </li>
-          <li>
+          <li data-id="4" data-title="">
             <a href="#">
               <img src="" alt="">
             </a>
-            <p></p>
+            <p>4</p>
           </li>
-          <li>
+          <li data-id="5" data-title="">
             <a href="#">
               <img src="" alt="">
             </a>
-            <p></p>
+            <p>5</p>
           </li>
-          <li>
+          <li data-id="6" data-title="">
             <a href="#">
               <img src="" alt="">
             </a>
-            <p></p>
+            <p>6</p>
           </li>
-          <li>
+          <li data-id="7" data-title="">
             <a href="#">
               <img src="" alt="">
             </a>
-            <p></p>
+            <p>7</p>
           </li>
-          <li>
+          <li data-id="8" data-title="">
             <a href="#">
               <img src="" alt="">
             </a>
-            <p></p>
+            <p>8</p>
           </li>
-          <li>
+          <li data-id="9" data-title="">
             <a href="#">
               <img src="" alt="">
             </a>
-            <p></p>
+            <p>9</p>
           </li>
-          <li>
+          <li data-id="10" data-title="">
             <a href="#">
               <img src="" alt="">
             </a>
-            <p></p>
+            <p>10</p>
           </li>
         </ol>
       </section>
